<resources>
    <string name="app_name">Github User List</string>
    <string name="github_username">Github Username</string>
    <string name="nama_lengkap_user">Nama Lengkap User</string>
    <string name="_0">follow</string>
    <string name="follow">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="search_hint">Search for users</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab">Tab %1$d</string>
    <string name="loading">loading</string>
    <string name="fab_favorite">Fab Favorite</string>
    <string name="user_avatar">user avatar</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">dark mode</string>
</resources>